--- a/index.html
+++ b/index.html
@@ -4,14 +4,33 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="js/app.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>Read Harder Challenge Book List</title>
   </head>
   <body>
+    <h1>Read Harder Challenge - Book List</h1>
     <form id="form-wrapper">
-      <p><input type="text" id="" required/></p>
-      <p><input type="text" id="" required/></p>
-        <p><select class="" name="">
-        </select></p>
+      <p>
+        <label for="Title">Title: </label>
+        <input type="text" id="Title" required/>
+      </p>
+      <p>
+        <label for="Author">Author: </label>
+        <input type="text" id="Author" required/>
+      </p>
+        <p>
+          <label for="Genre">Genre: </label>
+          <select id="Genre">
+          <option value=""disabled selected>Choose Genre</option>
+          <option value="Crime">Crime</option>
+          <option value="Romance">Romance</option>
+          <option value="Classics">Classics</option>
+          <option value="Fantasy">Fantasy</option>
+          <option value="Scifi">Sci-fi</option>
+          <option value="Horror">Horror</option>
+          <option value="Thriller">Thriller</option>
+        </select>
+      </p>
+      <p><button type="submit" id = "form-submit">Add Book</button></p>
     </form>
   </body>
 </html>
