--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel = "stylesheet" type = "text/css" href="/css/style.css">
     <script src="js/app.js"></script>
     <meta charset="utf-8">
     <title>Read Harder Challenge Book List</title>
@@ -10,16 +10,16 @@
     <h1>Read Harder Challenge - Book List</h1>
     <form id="form-wrapper">
       <p>
-        <label for="Title">Title: </label>
-        <input type="text" id="Title" required/>
+        <label for="title">Title: </label>
+        <input type="text" id="title" required/>
       </p>
       <p>
-        <label for="Author">Author: </label>
-        <input type="text" id="Author" required/>
+        <label for="author">Author: </label>
+        <input type="text" id="author" required/>
       </p>
         <p>
-          <label for="Genre">Genre: </label>
-          <select id="Genre">
+          <label for="genre">Genre: </label>
+          <select id="genre">
           <option value=""disabled selected>Choose Genre</option>
           <option value="Crime">Crime</option>
           <option value="Romance">Romance</option>
@@ -32,5 +32,11 @@
       </p>
       <p><button type="submit" id = "form-submit">Add Book</button></p>
     </form>
+
+    <h1>Completed Books</h1>
+    <section id="read-list">
+
+    </section>
+    <button id="delete-all">Clear List</button>
   </body>
 </html>
