--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel = "stylesheet" type = "text/css" href="/css/style.css">
+    <link rel = "stylesheet" type = "text/css" href="css/style.css">
     <script src="js/app.js"></script>
     <meta charset="utf-8">
-    <title>Read Harder Challenge Book List</title>
+    <title>Insurance Inventory</title>
   </head>
   <body>
-    <h1>Read Harder Challenge - Book List</h1>
+    <h1>Insurance Inventory</h1>
     <form id="form-wrapper">
       <p>
-        <label for="title">Title: </label>
-        <input type="text" id="title" required/>
+        <label for = "product">Product name: </label>
+        <input type = "text" id="product" required/>
       </p>
       <p>
-        <label for="author">Author: </label>
-        <input type="text" id="author" required/>
+        <label for="loc_purch">Location Purchased: </label>
+        <input id = "loc_purch" type="text" required/>
       </p>
-        <p>
-          <label for="genre">Genre: </label>
-          <select id="genre">
-          <option value=""disabled selected>Choose Genre</option>
-          <option value="Crime">Crime</option>
-          <option value="Romance">Romance</option>
-          <option value="Classics">Classics</option>
-          <option value="Fantasy">Fantasy</option>
-          <option value="Scifi">Sci-fi</option>
-          <option value="Horror">Horror</option>
-          <option value="Thriller">Thriller</option>
+      <p>
+        <label for="date_purch">Date Purchased: </label>
+        <input id = "date_purch" type="text" required>
+      </p>
+      <p>
+        <label for="condition">Condition: </label>
+        <select id="condition">
+          <option value=""disabled selected>Choose condition</option>
+          <option value="Excellent">Excellent</option>
+          <option value="Very Good">Very Good</option>
+          <option value="Good">Good</option>
+          <option value="Poor">Poor</option>
         </select>
       </p>
       <p><button type="submit" id = "form-submit">Add Book</button></p>
