added placeholder for form

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <form id="form-wrapper">
       <p>
         <label for = "product">Product name: </label>
-        <input type = "text" id="product" required/>
+        <input type = "text" id="product" placeholder="Your name" required/>
       </p>
       <p>
         <label for="loc_purch">Location Purchased: </label>
-        <input id = "loc_purch" type="text" required/>
+        <input id = "loc_purch" type="text" placeholder="Location" required/>
       </p>
       <p>
         <label for="date_purch">Date Purchased: </label>
-        <input id = "date_purch" type="text" required>
+        <input id = "date_purch" type="text" placeholder="Date purchased" required>
       </p>
       <p>
         <label for="condition">Condition: </label>
@@ -33,7 +33,7 @@
       </p>
       <p>
         <label for="price">Item Price(£): </label>
-        <input id = "price" type="number" required>
+        <input id = "price" type="number" placeholder="Price" required>
       </p>
       <p><button type="submit" id = "form-submit">Add Item</button></p>
 
